# pvr.mediaportal.tvserver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog  changelog.in  control  copyright  kodi-pvr-mediaportal-tvserver.install  rules
pvr.mediaportal.tvserver/: addon.xml  addon.xml.in  changelog.txt
pvr.mediaportal.tvserver/resources/: settings.xml
pvr.mediaportal.tvserver/resources/language/resource.language.af_za/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.am_et/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ar_sa/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ast_es/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.az_az/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.be_by/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.bg_bg/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.bs_ba/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ca_es/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.cs_cz/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.cy_gb/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.da_dk/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.de_de/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.el_gr/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.en_au/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.en_gb/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.en_nz/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.en_us/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.eo/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.es_ar/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.es_es/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.es_mx/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.et_ee/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.eu_es/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.fa_af/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.fa_ir/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.fi_fi/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.fo_fo/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.fr_ca/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.fr_fr/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.gl_es/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.he_il/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.hi_in/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.hr_hr/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.hu_hu/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.hy_am/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.id_id/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.is_is/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.it_it/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ja_jp/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ko_kr/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.lt_lt/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.lv_lv/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.mi/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.mk_mk/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ml_in/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.mn_mn/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.ms_my/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.mt_mt/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.my_mm/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.nb_no/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.nl_nl/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.pl_pl/: strings.po
pvr.mediaportal.tvserver/resources/language/resource.language.pt_br/: strings.po
src/: Cards.cpp  Cards.h  DateTime.cpp  DateTime.h  FileUtils.h  GUIDialogRecordSettings.cpp  GUIDialogRecordSettings.h  GenreTable.cpp  GenreTable.h  Socket.cpp  Socket.h  addon.cpp  addon.h  addon_version.h.in  channels.cpp  channels.h  client.cpp  client.h  epg.cpp  epg.h  os-dependent.h  pvrclient-mediaportal.cpp  pvrclient-mediaportal.h  recordings.cpp  recordings.h  settings.cpp  settings.h  timers.cpp  timers.h  uri.cpp  uri.h  utils.cpp  utils.h
src/lib/tsreader/: CMakeLists.txt  ChannelInfo.cpp  ChannelInfo.h  DeMultiplexer.cpp  DeMultiplexer.h  DvbUtil.cpp  DvbUtil.h  FileReader.cpp  FileReader.h  MemoryBuffer.cpp  MemoryBuffer.h  MemoryReader.cpp  MemoryReader.h  MemorySink.cpp  MemorySink.h  MepoRTSPClient.cpp  MepoRTSPClient.h  MultiFileReader.cpp  MultiFileReader.h  PacketSync.cpp  PacketSync.h  PatParser.cpp  PatParser.h  PidTable.cpp  PidTable.h  PmtParser.cpp  PmtParser.h  Section.cpp  Section.h  SectionDecoder.cpp  SectionDecoder.h  TSDebug.h  TSHeader.cpp  TSHeader.h  TSReader.cpp  TSReader.h
src/windows/: FileUtils.cpp  WindowsUtils.cpp  WindowsUtils.h
(+28 files in other folders)
